even more correct scrollbars (developing with live server here :P)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,7 @@ body, html {
 #chat {
   margin:0;
   padding:0;
-  overflow:scroll;
+  overflow:auto;
 }
 #chat p {
   margin-top:3px;
